[package]
name = "txcmp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
csv-async = { version = "1.2.1", features = ["with_serde", "tokio"]}
thiserror = "1.0.26"
actix = "0.12.0"
anyhow = "1.0.40"